<resources>
    <string name="app_name">Pocket Humans</string>
    <string name="hello_welcome_to_pocket_humans">Hello, welcome to Pocket Humans!\n Log in to start playing!</string>
    <string name="dont_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="register_button_text">Register</string>
    <string name="login_button_text">Log in!</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">Username</string>
    <string name="pocket_humans_landing_text">Pocket Humans!\nGotta Employ Em All!</string>
    <string name="landing_logout_button">Log Out</string>
    <string name="admin_edit_humans">ADMIN: Edit Humans</string>
    <string name="make_a_human">Make a Human!</string>
    <string name="human_battle">Human Battle!</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="register_a_new_account">Register a new account!</string>
    <string name="login_fail_feedback">User details do not match any records.\nCheck your username and password and try again.</string>
    <string name="hello">Hello</string>
    <string name="select_your_human">Select your human.</string>
    <string name="confirm">Confirm</string>
    <string name="username_taken">Username is already taken, please select a new one</string>
    <string name="password_mismatch">Passwords do not match, please check again.</string>
    <string name="username_cannot_be_blank">Username cannot be blank</string>
    <string name="password_cannot_be_blank">Password cannot be blank</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="submit">Submit</string>
    <string name="stat_total_must_not_exceed_90">Stat total must not exceed 90</string>
    <string name="long_press_hint">\nHint: Long Press a move button to see it\'s description!</string>
    <string name="drc_need_to_unlock_feedback">You can\'t use Dr.C until you defeat him in a battle!</string>
    <string name="clone_human_feedback">You can\'t battle a human against themselves!</string>
    <string name="colon">": "</string>
    <string name="outof100">/100 HP</string>
    <string name="new_battle">New Battle</string>
    <string name="begin_human_battle">Begin Human Battle!</string>
    <string name="retreat">Retreat!</string>
    <string name="select_your_opponent">Select your opponent</string>
    <string name="speed_stat">Speed Stat</string>
    <string name="attack_stat">Attack Stat</string>
    <string name="defense_stat">Defense Stat</string>
    <string name="speed">Speed</string>
    <string name="defense">Defense</string>
    <string name="attack">Attack</string>
    <string name="select_moves">Select Moves</string>
    <string name="create_your_human">Create your human!</string>
    <string name="admins_can_give_a_human_more_than_90_stat_points">Admins can give a human more than 90 stat points.</string>
</resources>